# falcon-pachinko

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Makefile  README.md  pyproject.toml  typos.local.toml  typos.toml
.github/actions/build-wheels/: action.yml
.github/actions/pure-python-wheel/: action.yml
.github/workflows/: build-wheels.yml  ci.yml  coverage-main.yml  release.yml
.rules/: python-pyproject.mdc  python-typing.mdc
docs/: developers-guide.md  falcon-websocket-extension-design.md  guide-to-modern-python-code-coverage.md  migration-guide.md  release-workflow.md  roadmap-v1-legacy.md  roadmap.md  users-guide.md
examples/: __init__.py
examples/random_status/: client.py  server.py
examples/reference_app/: __init__.py  resources.py  server.py  services.py  workers.py
falcon_pachinko/: __init__.py  _testing_harness.py  connection_manager.py  di.py  dispatcher.py  exceptions.py  handlers.py  hooks.py  protocols.py  resource.py  router.py  schema.py  testing.py  utils.py  websocket.py  workers.py
falcon_pachinko/behaviour/: test_hooks_behaviour.py  test_nested_resource.py  test_worker_controller.py
falcon_pachinko/behaviour/features/: hooks.feature  nested_resource.feature  worker_controller.feature
falcon_pachinko/testing/: __init__.py  _common.py  client.py  harness.py  simulator.py
falcon_pachinko/unittests/: helpers.py  resource_factories.py  test_app_install.py  test_handles_message.py  test_hooks.py  test_install.py  test_nested_resources.py  test_router.py  test_schema_dispatch.py  test_websocket_resource.py  test_workers.py
falcon_ws/: __init__.py  connection_manager.py
falcon_ws/unittests/: test_install.py
scripts/: typos_rollout_check.py
scripts/tests/: test_typos_rollout_check.py
tests/: __init__.py  conftest.py  test_connection_manager_unit.py  test_reference_example_unit.py  test_service_container_unit.py  test_websocket_simulator_fixture_unit.py  test_websocket_simulator_unit.py  test_websocket_test_client_unit.py  test_worker_controller_unit.py
tests/behaviour/: __init__.py  _lifespan.py  connection_manager.feature  custom_connection_backend.feature  dependency_injection.feature  lifespan_workers.feature  reference_example.feature  simulator_fixture.feature  test_connection_manager_steps.py  test_custom_connection_backend_steps.py  test_dependency_injection_steps.py  test_lifespan_workers_steps.py  test_reference_example_steps.py  test_simulator_fixture_steps.py  test_websocket_simulator_steps.py  test_websocket_test_client_steps.py  websocket_simulator.feature  websocket_test_client.feature
